syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/auth/v1;authv1";

// User represents an authenticated identity record.
message User {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// AuthService provides minimal auth user operations.
service AuthService {
  // Create a new user record.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Begin a passkey registration ceremony.
  rpc BeginPasskeyRegistration(BeginPasskeyRegistrationRequest) returns (BeginPasskeyRegistrationResponse);

  // Finish a passkey registration ceremony.
  rpc FinishPasskeyRegistration(FinishPasskeyRegistrationRequest) returns (FinishPasskeyRegistrationResponse);

  // Begin a passkey login ceremony.
  rpc BeginPasskeyLogin(BeginPasskeyLoginRequest) returns (BeginPasskeyLoginResponse);

  // Finish a passkey login ceremony.
  rpc FinishPasskeyLogin(FinishPasskeyLoginRequest) returns (FinishPasskeyLoginResponse);

  // Generate a magic link token for email recovery.
  rpc GenerateMagicLink(GenerateMagicLinkRequest) returns (GenerateMagicLinkResponse);

  // Consume a magic link token.
  rpc ConsumeMagicLink(ConsumeMagicLinkRequest) returns (ConsumeMagicLinkResponse);

  // List email addresses for a user.
  rpc ListUserEmails(ListUserEmailsRequest) returns (ListUserEmailsResponse);

  // Issue a join grant for a campaign invite.
  rpc IssueJoinGrant(IssueJoinGrantRequest) returns (IssueJoinGrantResponse);

  // Get a user record by ID.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // List user records.
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // Add a contact for quick user lookup.
  rpc AddContact(AddContactRequest) returns (AddContactResponse);

  // Remove a contact from a user's quick lookup list.
  rpc RemoveContact(RemoveContactRequest) returns (RemoveContactResponse);

  // List contacts for a user.
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse);

  // Lease due integration outbox events for background worker processing.
  rpc LeaseIntegrationOutboxEvents(LeaseIntegrationOutboxEventsRequest) returns (LeaseIntegrationOutboxEventsResponse);

  // Acknowledge processing outcome for one leased integration outbox event.
  rpc AckIntegrationOutboxEvent(AckIntegrationOutboxEventRequest) returns (AckIntegrationOutboxEventResponse);
}

message CreateUserRequest {
  string email = 1;
}

message CreateUserResponse {
  User user = 1;
}

message BeginPasskeyRegistrationRequest {
  string user_id = 1;
}

message BeginPasskeyRegistrationResponse {
  string session_id = 1;
  bytes credential_creation_options_json = 2;
}

message FinishPasskeyRegistrationRequest {
  string session_id = 1;
  bytes credential_response_json = 2;
}

message FinishPasskeyRegistrationResponse {
  User user = 1;
  string credential_id = 2;
}

message BeginPasskeyLoginRequest {
  string user_id = 1;
}

message BeginPasskeyLoginResponse {
  string session_id = 1;
  bytes credential_request_options_json = 2;
}

message FinishPasskeyLoginRequest {
  string session_id = 1;
  bytes credential_response_json = 2;
  string pending_id = 3;
}

message FinishPasskeyLoginResponse {
  User user = 1;
  string credential_id = 2;
}

message GenerateMagicLinkRequest {
  string user_id = 1;
  string email = 2;
  string pending_id = 3;
}

message GenerateMagicLinkResponse {
  string magic_link_url = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message ConsumeMagicLinkRequest {
  string token = 1;
}

message ConsumeMagicLinkResponse {
  User user = 1;
  string pending_id = 2;
}

message ListUserEmailsRequest {
  string user_id = 1;
}

message ListUserEmailsResponse {
  repeated UserEmail emails = 1;
}

message UserEmail {
  string email = 1;
  google.protobuf.Timestamp verified_at = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message IssueJoinGrantRequest {
  string user_id = 1;
  string campaign_id = 2;
  string invite_id = 3;
  string participant_id = 4;
}

message IssueJoinGrantResponse {
  string join_grant = 1;
  string jti = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  // The maximum number of users to return.
  // If zero, the server defaults to 10. The server clamps values above 50 to 50.
  int32 page_size = 1;

  // A page token received from a prior ListUsersResponse.
  string page_token = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
}

message Contact {
  string owner_user_id = 1;
  string contact_user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message AddContactRequest {
  string owner_user_id = 1;
  string contact_user_id = 2;
}

message AddContactResponse {
  Contact contact = 1;
}

message RemoveContactRequest {
  string owner_user_id = 1;
  string contact_user_id = 2;
}

message RemoveContactResponse {}

message ListContactsRequest {
  string owner_user_id = 1;

  // The maximum number of contacts to return.
  // If zero, the server defaults to 10. The server clamps values above 50 to 50.
  int32 page_size = 2;

  // A page token received from a prior ListContactsResponse.
  string page_token = 3;
}

message ListContactsResponse {
  repeated Contact contacts = 1;
  string next_page_token = 2;
}

message IntegrationOutboxEvent {
  string id = 1;
  string event_type = 2;
  string payload_json = 3;
  string dedupe_key = 4;
  string status = 5;
  int32 attempt_count = 6;
  google.protobuf.Timestamp next_attempt_at = 7;
  string lease_owner = 8;
  google.protobuf.Timestamp lease_expires_at = 9;
  string last_error = 10;
  google.protobuf.Timestamp processed_at = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message LeaseIntegrationOutboxEventsRequest {
  string consumer = 1;
  int32 limit = 2;
  int64 lease_ttl_ms = 3;
  google.protobuf.Timestamp now = 4;
}

message LeaseIntegrationOutboxEventsResponse {
  repeated IntegrationOutboxEvent events = 1;
}

enum IntegrationOutboxAckOutcome {
  INTEGRATION_OUTBOX_ACK_OUTCOME_UNSPECIFIED = 0;
  INTEGRATION_OUTBOX_ACK_OUTCOME_SUCCEEDED = 1;
  INTEGRATION_OUTBOX_ACK_OUTCOME_RETRY = 2;
  INTEGRATION_OUTBOX_ACK_OUTCOME_DEAD = 3;
}

message AckIntegrationOutboxEventRequest {
  string event_id = 1;
  string consumer = 2;
  IntegrationOutboxAckOutcome outcome = 3;
  google.protobuf.Timestamp next_attempt_at = 4;
  string last_error = 5;
  google.protobuf.Timestamp processed_at = 6;
}

message AckIntegrationOutboxEventResponse {}
